--- a/Projetos/Projeto1/Estilização/style.css
+++ b/Projetos/Projeto1/Estilização/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
 header {
@@ -16,7 +17,7 @@ header {
 
 body {
     text-align: center;
-    background-image: url(https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExb3k0bzVkb3JrM3R3M2pwaTh1NWhkMGtkZG5ubGd6dHd0OHA0dHRnZCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/WDoKnZsZrFYw8/giphy.gif);
+    background-image: url(https://i.gifer.com/RiH3.gif);
     background-size: cover;
     background-position: center;
     font-family: 'Arial', sans-serif;
